continue work on 1.9.8.1